--- a/GoodFoodMKE/Content/Site.css
+++ b/GoodFoodMKE/Content/Site.css
@@ -2,6 +2,10 @@
     padding-top: 50px;
     padding-bottom: 20px;
 }
+#map {
+    width: 200px;
+    height: 200px;
+}
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
