--- a/GoodFoodMKE/Views/Home/Index.cshtml
+++ b/GoodFoodMKE/Views/Home/Index.cshtml
@@ -2,30 +2,19 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="banner">
+<img src="~/Image/farm_market_banner.png" style="width: 100%" />
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-12">
+        <h2 style="text-align: center">About Us</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Good food shouldn’t be hard to find. That’s why it’s good food Milwaukee’s mission to connect eaters with local growers. By shopping for and eating locally produced food grown with sustainable  practices in mind, we can improve not just the health of our bodies, but also our environment, economy, and community.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2 style="text-align: center; color: #8b0162">
+            @Html.ActionLink("Register Now" , "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink"})
+            
+            </h2>
     </div>
 </div>
