create farm create landing page

--- a/GoodFoodMKE/Views/Farms/Index.cshtml
+++ b/GoodFoodMKE/Views/Farms/Index.cshtml
@@ -4,8 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
+<h2>Farms</h2>
+<p>
+    @Html.ActionLink("Create Farm Profile", "Create")
+</p>
 <table id="farms" class="table table-bordered table-hover table-responsive">
     <thead>
         <tr>
