--- a/GoodFoodMKE/Views/Shared/_Layout.cshtml
+++ b/GoodFoodMKE/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <a class="nav-link">@Html.ActionLink("Markets", "Index", "Markets")</a>
                     </li>
                     <li class="nav-link">
-                        <a class="nav-link">@Html.ActionLink("Farmers", "Index", "Farm")</a>
+                        <a class="nav-link">@Html.ActionLink("Farms", "Index", "Farms")</a>
                     </li>
                     <li class="nav-link">
                         <a class="nav-link">@Html.ActionLink("Blogs", "Index", "Blog")</a>
