--- a/GoodFoodMKE/Views/Account/Login.cshtml
+++ b/GoodFoodMKE/Views/Account/Login.cshtml
@@ -51,10 +51,14 @@
             }
         </section>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+    <div class="col-8">
+        <div>
+            <img src="~/Image/register.jpg" style="height: 18em; display:block; margin-left:auto; margin-right:auto; border: .5em solid #367700" />
+        </div>
+        <hr />
+        <p>GoodFoodMKE utilizes Gravatar for our profile photos.</p>
+        <p>What's a Gravatar? A Gravatar is a Globally Recognized Avatar. You upload it and create your profile just once, and then when you participate in any Gravatar-enabled site, your Gravatar image will automatically follow you there. Click to find out more and create a Gravatar account.</p>
+        <a href="https://en.gravatar.com/" target="_blank"><img src="~/Image/gravatar.png" style="height:3em;  display:block; margin-left:auto; margin-right:auto;" /></a>
     </div>
 </div>
 
