--- a/GoodFoodMKE/Views/Market/Index.cshtml
+++ b/GoodFoodMKE/Views/Market/Index.cshtml
@@ -1,51 +1,54 @@
-﻿@model IEnumerable<GoodFoodMKE.Models.ViewModels.FarmViewModel>
+﻿@model IEnumerable<Market>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Farms</h2>
+<h2>Markets</h2>
+
 <p>
-    @Html.ActionLink("Create Farm Profile", "Create")
+    @Html.ActionLink("Add your market to our community", "Create")
 </p>
-<table id="farms" class="table table-bordered table-hover table-responsive">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Address</th>
-            <th>Phone Number</th>
-            <th>Website</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var f in Model)
-        {
+@if(Model.Count()!=0)
+{
+    <table id="farms" class="table table-bordered table-hover table-responsive">
+        <thead>
             <tr>
-                <td>@Html.ActionLink(f.Farm.Name, "Details", "Location", new { id = f.Farm.Id }, null)</td>
-                <td>@f.Farm.Address.AddressString</td>
-                <td>@f.Farm.WebAddress</td>
-                
+                <th>Name</th>
+                <th>Address</th>
+                <th>Phone Number</th>
+                <th>Website</th>
 
-
-                <td>
-                    @Html.ActionLink("Edit", "Edit", "Location", new { id = f.Farm.Id }, new { @class = "btn btn-default" })
-                    @Html.ActionLink("Details", "Details", "Location", new { id = f.Farm.Id }, new { @class = "btn btn-default" })
-
-
-                </td>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var m in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(m.Name, "Details", "Market", new { id = m.Id}, null)</td>
+                    <td>@m.Address.AddressString</td>
+                    <td>@m.WebAddress</td>
 
+
+
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", "Location", new { id = m.Id }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Details", "Details", "Location", new { id = m.Id }, new { @class = "btn btn-default" })
+
+
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
 
 @section scripts
     {
     <script>
-                $(document).ready(function () {
-                    $("#locations").DataTable();
-                })
+        $(document).ready(function () {
+            $("#locations").DataTable();
+        })
     </script>
 }
